--- a/insurance_model.ipynb
+++ b/insurance_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data.drop(['gender','region','exercise_frequency','occupation', 'charges'], axis=1)\n",
+    "y = data['charges']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +90,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +117,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -646,6 +656,275 @@
     "print(\"\\n=== Error Distribution Statistics ===\")\n",
     "print(results_df['Residual'].describe())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# First split your data\\nX_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\\n\\n# Then train and evaluate models\\nbest_models = train_and_evaluate_models(X_train, y_train, X_test, y_test, pipelines, param_grid)\\n'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, RobustScaler, OrdinalEncoder, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
+    "import numpy as np\n",
+    "from sklearn.compose import TransformedTargetRegressor\n",
+    "from sklearn.preprocessing import FunctionTransformer, PolynomialFeatures\n",
+    "\n",
+    "# Create log transformer for target variable\n",
+    "def custom_log_transform(x):\n",
+    "    return np.log1p(x)\n",
+    "\n",
+    "def custom_exp_transform(x):\n",
+    "    return np.expm1(x)\n",
+    "\n",
+    "log_transformer = FunctionTransformer(func=custom_log_transform, \n",
+    "                                    inverse_func=custom_exp_transform)\n",
+    "\n",
+    "# Individual transformers with improved preprocessing\n",
+    "numeric_transformer = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy='median')),\n",
+    "    ('outlier_scaler', RobustScaler()),  # Better handling of outliers\n",
+    "    ('poly', PolynomialFeatures(degree=2, include_bias=False)),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "ordinal_transformer = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+    "    ('encoder', OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1))\n",
+    "])\n",
+    "\n",
+    "categorical_transformer = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy='constant', fill_value='missing')),\n",
+    "    ('encoder', OneHotEncoder(sparse_output=False, handle_unknown='ignore'))\n",
+    "])\n",
+    "\n",
+    "# Main preprocessor\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('numeric', numeric_transformer, ['age', 'bmi']),\n",
+    "        ('ordinal', ordinal_transformer, ['children', 'coverage_level']),\n",
+    "        ('categorical', categorical_transformer, ['smoker', 'medical_history', 'family_medical_history'])\n",
+    "    ],\n",
+    "    remainder='passthrough'\n",
+    ")\n",
+    "\n",
+    "# Define regressors with improved hyperparameters\n",
+    "regressors = {\n",
+    "    'linear_regression': LinearRegression(),\n",
+    "    'random_forest': RandomForestRegressor(random_state=44),\n",
+    "    'gradient_boosting': GradientBoostingRegressor(random_state=44),\n",
+    "    'svr': SVR(),\n",
+    "    'decision_tree': DecisionTreeRegressor(random_state=44)\n",
+    "}\n",
+    "\n",
+    "# Create pipelines with log transformation for target variable\n",
+    "pipelines = {\n",
+    "    name: Pipeline(steps=[\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('regressor', TransformedTargetRegressor(\n",
+    "            regressor=reg,\n",
+    "            transformer=log_transformer,  # Using log transform instead of StandardScaler\n",
+    "            check_inverse=False\n",
+    "        ))\n",
+    "    ]) for name, reg in regressors.items()\n",
+    "}\n",
+    "\n",
+    "# Expanded parameter grid\n",
+    "param_grid = {\n",
+    "    'linear_regression': {}, \n",
+    "    'random_forest': {\n",
+    "        'regressor__regressor__n_estimators': [100, 200, 300],\n",
+    "        'regressor__regressor__max_depth': [10, 20, 30],\n",
+    "        'regressor__regressor__min_samples_split': [2, 5, 10]\n",
+    "    },\n",
+    "    'gradient_boosting': {\n",
+    "        'regressor__regressor__n_estimators': [100, 200, 300],\n",
+    "        'regressor__regressor__learning_rate': [0.01, 0.05, 0.1],\n",
+    "        'regressor__regressor__max_depth': [3, 5, 7]\n",
+    "    },\n",
+    "    'svr': {\n",
+    "        'regressor__regressor__C': [0.1, 1.0, 10.0],\n",
+    "        'regressor__regressor__kernel': ['rbf', 'linear'],\n",
+    "        'regressor__regressor__epsilon': [0.1, 0.2]\n",
+    "    },\n",
+    "    'decision_tree': {\n",
+    "        'regressor__regressor__max_depth': [5, 10, 15],\n",
+    "        'regressor__regressor__min_samples_split': [2, 5, 10]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "def train_and_evaluate_models(X_train, y_train, X_test, y_test, pipelines, param_grid):\n",
+    "    best_models = {}\n",
+    "    \n",
+    "    for model_name, pipeline in pipelines.items():\n",
+    "        print(f\"\\nTraining {model_name}...\")\n",
+    "        current_param_grid = param_grid[model_name]\n",
+    "        \n",
+    "        grid_search = GridSearchCV(\n",
+    "            estimator=pipeline,\n",
+    "            param_grid=current_param_grid,\n",
+    "            cv=5,\n",
+    "            n_jobs=-1,\n",
+    "            verbose=1,\n",
+    "            scoring='neg_mean_squared_error'\n",
+    "        )\n",
+    "        \n",
+    "        grid_search.fit(X_train, y_train)\n",
+    "        y_pred = grid_search.predict(X_test)\n",
+    "        \n",
+    "        # Calculate multiple metrics\n",
+    "        mse = mean_squared_error(y_test, y_pred)\n",
+    "        rmse = np.sqrt(mse)\n",
+    "        r2 = r2_score(y_test, y_pred)\n",
+    "        mae = mean_absolute_error(y_test, y_pred)\n",
+    "        \n",
+    "        # Store results\n",
+    "        best_models[model_name] = {\n",
+    "            'best_params': grid_search.best_params_,\n",
+    "            'best_score': -grid_search.best_score_,\n",
+    "            'best_estimator': grid_search.best_estimator_,\n",
+    "            'test_mse': mse,\n",
+    "            'test_rmse': rmse,\n",
+    "            'test_r2': r2,\n",
+    "            'test_mae': mae\n",
+    "        }\n",
+    "        \n",
+    "        # Print current model results\n",
+    "        print(f\"\\n{model_name} Results:\")\n",
+    "        print(f\"Best Parameters: {best_models[model_name]['best_params']}\")\n",
+    "        print(f\"Test MSE: {mse:.2f}\")\n",
+    "        print(f\"Test RMSE: {rmse:.2f}\")\n",
+    "        print(f\"Test R² Score: {r2:.4f}\")\n",
+    "        print(f\"Test MAE: {mae:.2f}\")\n",
+    "        \n",
+    "    # Find best overall model\n",
+    "    best_model_name = min(best_models, key=lambda x: best_models[x]['test_mse'])\n",
+    "    \n",
+    "    print(\"\\n=== Overall Best Model ===\")\n",
+    "    print(f\"Best Model: {best_model_name}\")\n",
+    "    print(f\"Test RMSE: {best_models[best_model_name]['test_rmse']:.2f}\")\n",
+    "    print(f\"Test R² Score: {best_models[best_model_name]['test_r2']:.4f}\")\n",
+    "    print(f\"Best Parameters: {best_models[best_model_name]['best_params']}\")\n",
+    "    \n",
+    "    return best_models\n",
+    "\n",
+    "# Example usage:\n",
+    "\"\"\"\n",
+    "# First split your data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Then train and evaluate models\n",
+    "best_models = train_and_evaluate_models(X_train, y_train, X_test, y_test, pipelines, param_grid)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training linear_regression...\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "\n",
+      "linear_regression Results:\n",
+      "Best Parameters: {}\n",
+      "Test MSE: 5688406.26\n",
+      "Test RMSE: 2385.04\n",
+      "Test R² Score: 0.7216\n",
+      "Test MAE: 1904.51\n",
+      "\n",
+      "Training random_forest...\n",
+      "Fitting 5 folds for each of 27 candidates, totalling 135 fits\n",
+      "\n",
+      "random_forest Results:\n",
+      "Best Parameters: {'regressor__regressor__max_depth': 10, 'regressor__regressor__min_samples_split': 2, 'regressor__regressor__n_estimators': 300}\n",
+      "Test MSE: 2863139.91\n",
+      "Test RMSE: 1692.08\n",
+      "Test R² Score: 0.8599\n",
+      "Test MAE: 1381.40\n",
+      "\n",
+      "Training gradient_boosting...\n",
+      "Fitting 5 folds for each of 27 candidates, totalling 135 fits\n",
+      "\n",
+      "gradient_boosting Results:\n",
+      "Best Parameters: {'regressor__regressor__learning_rate': 0.1, 'regressor__regressor__max_depth': 3, 'regressor__regressor__n_estimators': 100}\n",
+      "Test MSE: 2500198.98\n",
+      "Test RMSE: 1581.20\n",
+      "Test R² Score: 0.8776\n",
+      "Test MAE: 1291.10\n",
+      "\n",
+      "Training svr...\n",
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "\n",
+      "svr Results:\n",
+      "Best Parameters: {'regressor__regressor__C': 1.0, 'regressor__regressor__epsilon': 0.1, 'regressor__regressor__kernel': 'rbf'}\n",
+      "Test MSE: 3547721.24\n",
+      "Test RMSE: 1883.54\n",
+      "Test R² Score: 0.8264\n",
+      "Test MAE: 1474.89\n",
+      "\n",
+      "Training decision_tree...\n",
+      "Fitting 5 folds for each of 9 candidates, totalling 45 fits\n",
+      "\n",
+      "decision_tree Results:\n",
+      "Best Parameters: {'regressor__regressor__max_depth': 5, 'regressor__regressor__min_samples_split': 10}\n",
+      "Test MSE: 3679655.28\n",
+      "Test RMSE: 1918.24\n",
+      "Test R² Score: 0.8199\n",
+      "Test MAE: 1556.85\n",
+      "\n",
+      "=== Overall Best Model ===\n",
+      "Best Model: gradient_boosting\n",
+      "Test RMSE: 1581.20\n",
+      "Test R² Score: 0.8776\n",
+      "Best Parameters: {'regressor__regressor__learning_rate': 0.1, 'regressor__regressor__max_depth': 3, 'regressor__regressor__n_estimators': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_models = train_and_evaluate_models(X_train, y_train, X_test, y_test, pipelines, param_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
