--- a/insurance_model.ipynb
+++ b/insurance_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,40 +146,31 @@
     "from sklearn.compose import TransformedTargetRegressor\n",
     "\n",
     "\n",
-    "# Individual transformers\n",
     "age_transformer = Pipeline([\n",
-    "    ('scaler', StandardScaler())\n",
-    "])\n",
+    "    ('scaler', StandardScaler())])\n",
     "\n",
     "bmi_transformer = Pipeline([\n",
-    "    ('scaler', StandardScaler())\n",
-    "])\n",
+    "    ('scaler', StandardScaler())])\n",
     "\n",
     "children_transformer = Pipeline([\n",
-    "    ('encoder', OrdinalEncoder())\n",
-    "])\n",
+    "    ('encoder', OrdinalEncoder())])\n",
     "\n",
     "smoker_transformer = Pipeline([\n",
-    "    ('encoder', OrdinalEncoder())\n",
-    "])\n",
+    "    ('encoder', OrdinalEncoder())])\n",
     "\n",
     "medical_history_transformer = Pipeline([\n",
-    "    ('encoder', OneHotEncoder(sparse_output=True))\n",
-    "])\n",
+    "    ('encoder', OneHotEncoder(handle_unknown='ignore'))])\n",
     "\n",
     "family_medical_history_transformer = Pipeline([\n",
-    "    ('encoder', OneHotEncoder(sparse_output=True))\n",
-    "])\n",
+    "    ('encoder', OneHotEncoder(handle_unknown='ignore'))])\n",
     "\n",
     "coverage_level_transformer = Pipeline([\n",
-    "    ('encoder', OrdinalEncoder())\n",
-    "])\n",
+    "    ('encoder', OrdinalEncoder())])\n",
     "\n",
     "charges_transformer = Pipeline([\n",
-    "    ('scaler', StandardScaler())\n",
-    "])\n",
+    "    ('scaler', StandardScaler())])\n",
     "\n",
-    "# Main preprocessor\n",
+    "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('age_transformer', age_transformer, ['age']),\n",
@@ -190,8 +181,7 @@
     "        ('family_medical_history_transformer', family_medical_history_transformer, ['family_medical_history']),\n",
     "        ('coverage_level_transformer', coverage_level_transformer, ['coverage_level'])\n",
     "    ],\n",
-    "    remainder='passthrough'\n",
-    ")\n",
+    "    remainder='passthrough')\n",
     "\n",
     "regressors = {\n",
     "    'linear_regression': LinearRegression(),\n",
@@ -201,12 +191,6 @@
     "    'decision_tree': DecisionTreeRegressor(random_state=44)\n",
     "}\n",
     "\n",
-    "# pipelines = {\n",
-    "#     name: Pipeline(steps=[\n",
-    "#         ('preprocessor', preprocessor),\n",
-    "#         ('regressor', reg)\n",
-    "#     ]) for name, reg in regressors.items()\n",
-    "# }\n",
     "\n",
     "pipelines = {\n",
     "    name: Pipeline(steps=[\n",
@@ -221,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,12 +229,12 @@
     "        'regressor__regressor__max_depth': [5, 10],\n",
     "        'regressor__regressor__min_samples_split': [2, 5]\n",
     "    }\n",
-    "}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +652,7 @@
        "'\\n# First split your data\\nX_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\\n\\n# Then train and evaluate models\\nbest_models = train_and_evaluate_models(X_train, y_train, X_test, y_test, pipelines, param_grid)\\n'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -911,19 +895,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'f' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
