--- a/insurance_model.ipynb
+++ b/insurance_model.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,8 +167,6 @@
     "coverage_level_transformer = Pipeline([\n",
     "    ('encoder', OrdinalEncoder())])\n",
     "\n",
-    "charges_transformer = Pipeline([\n",
-    "    ('scaler', StandardScaler())])\n",
     "\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
@@ -234,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -254,31 +252,30 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "# First, select one pipeline to use with GridSearchCV\n",
-    "# Let's create a dictionary to store all results\n",
+    "\n",
     "best_models = {}\n",
     "\n",
     "for model_name, pipeline in pipelines.items():\n",
-    "    # Create param grid for current model\n",
+    "\n",
     "    current_param_grid = param_grid[model_name]\n",
     "    \n",
-    "    # Create GridSearchCV for current model\n",
+    "\n",
     "    grid_search = GridSearchCV(\n",
-    "        estimator=pipeline,  # Pass single pipeline instead of dictionary\n",
+    "        estimator=pipeline,  \n",
     "        param_grid=current_param_grid,\n",
     "        cv=5,\n",
     "        n_jobs=-1,\n",
     "        verbose=True,\n",
-    "        scoring='neg_mean_squared_error'  # Note: 'mse' is deprecated, use 'neg_mean_squared_error'\n",
+    "        scoring='neg_mean_squared_error'  \n",
     "    )\n",
     "    \n",
-    "    # Fit the model\n",
+    " \n",
     "    grid_search.fit(X_train, y_train)\n",
     "    \n",
-    "    # Store results\n",
+    "\n",
     "    best_models[model_name] = {\n",
     "        'best_params': grid_search.best_params_,\n",
-    "        'best_score': -grid_search.best_score_,  # Convert back to MSE from negative MSE\n",
+    "        'best_score': -grid_search.best_score_,  \n",
     "        'best_estimator': grid_search.best_estimator_\n",
     "    }\n"
    ]
